--- a/styles.css
+++ b/styles.css
@@ -33,17 +33,10 @@ footer {margin-top: 10px;}
 
   .c {width: 50%;}}
 
-@media screen and (max-width: 600px) {
-  main {
-    flex-direction: column;
-  }
+@media screen and (max-width: 600px)
+        {main {flex-direction: column;}
 
-  .a-and-b {
-    width: 100%;
-  }
+  .a-and-b {width: 100%;}
 
-  .c {
-    width: 100%;
-    height: 300px;
-  }
-}
+  .c {width: 100%;
+      height: 300px;}}
